2008-06-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-states.txt:
	Fix device open/close docs.

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Mention bugnumber for last commit.

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	patch by: Luc Pionchon  <luc.pionchon@nokia.com>

	* docs/manual/manual.xml:
	- Reorganised the previous "introduction" bundle into Foreword,
	Introduction, and About GStreamer. The two first are <preface>
	docbook elements. The later is the first part of the book.
	- added intro-gstreamer.xml (content partially from
	intro-preface.xml)
	- moved appendix-win32.xml into appendix-integration.xml

	* docs/manual/intro-preface.xml: gstreamer section moved...
	* docs/manual/intro-gstreamer.xml: ...here. new file.

	* docs/manual/appendix-win32.xml: removed file. Content moved...
	* docs/manual/appendix-integration.xml: ...here.
	
	* docs/manual/highlevel-components.xml: section about GstEditor moved...
	* docs/manual/appendix-checklist.xml: ...here.
	
	Fixes: 538764

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	patch by: Luc Pionchon  <luc.pionchon@nokia.com>

	* docs/manual/basics-helloworld.xml:
	* docs/manual/hello-world.fig:
	  - Explicitely include glib.h.
	  - Do not use global variables.
	  - Use g_printerr() instead of g_print().
	  - Minor formating/renaming to increase readibility.
	  - Renamed new_pad() to on_pad_added()
	  - Improved explenatory comments.
	  - renamed ogg parser to ogg demuxer
	  - Use "autoaudiosink" instead of "alsasink".
	  Fixes: #538619

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Remove cvs conflict marker.

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	* docs/README:
	  Document that for plgin-docs we extraxt he short-desc from the element
	  details.

	* docs/design/part-states.txt:
	  Tell that devices should be closed in PAUSED -> READY.

	* docs/manual/README:
	  Document how tests in the manual are handled.

	* docs/manuals.mak: